# gwp_uncertainties

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg
dev/: example.py  gwp_uncertainties.html  gwp_uncertainties.ipynb  plot_gwp_uncertainties.ipynb  plot_paper2.py
gwp_uncertainties/: __init__.py  code.py  constants.py  gwp_computations.py  version.py
gwp_uncertainties/data/: gwp_values.xlsx  ipcc2013.json
tests/: agwp_gwp.py  delta_gwp.py  gwp.py
