[metadata]
# replace with your username:
name = gwp_uncertainties
version = 0.1.dev1
author = Aleksandra Kim
author_email = aleksandra.kim@icloud.com
description = computes uncertainties in GWP values for a number of substances as described in the IPCC 2013 report.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aleksandra-kim/gwp_uncertainties
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6